# my-finance

./: .gitignore  README.md  gold_price.py  gold_price_history.csv  main.py  pyproject.toml  requirements.txt
src/my_finance/: eval_snowball.py  gold_price.py  main.py
src/my_finance/data_center/: config.py  mysql_test.py  mysql_util.py  stock_client.py  stock_dao.py  stock_init.py
src/my_finance/strategy_engine/: single_watcher.py  stock_selecter.py
src/my_finance/tools/: notify_client.py
src/my_finance/utils/: obj_utils.py
